-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: port-stage-aarch32-8, port-stage-aarch32-9
-
Component/s: hotspot
-
None
-
aarch32
-
linux
JIT may call divide() function with similar dividend and divider registers.
Following hotspot regression tests are failed:
compiler/6711117/Test.java
compiler/6716441/Tester.java
Following hotspot regression tests are failed:
compiler/6711117/Test.java
compiler/6716441/Tester.java