8152297: Macroassmbler:divide has to be able accept the same dividend and divisor Summary: Remove assert which failes becuase divide is called with same dividend and divisor Reviewed-by: enevill Contributed-by: snazarkin@azul.com